immich/02-immich-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: immich
  name: immich
  namespace: immich
spec:
  clusterIP: 10.43.171.215
  clusterIPs:
  - 10.43.171.215
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 2283
  selector:
    app: immich
