immich/03-immich-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-ingress
  namespace: immich
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`immich.home.bakatrouble.me`)
    services:
    - kind: Service
      name: immich
      namespace: immich
      port: 2283
  tls:
    certResolver: default
